hphp/test/zend/good/ext/calendar/tests/jdtomonthname.php.skipif
<?php if (!extension_loaded("calendar")) print "skip"; ?>