hphp/test/zend/bad/ext/phar/tests/tar/bug49910.php.skipif
<?php if (!extension_loaded("phar")) die("skip"); ?>
<?php if (!extension_loaded("zlib")) die("skip"); ?>